[package]
name = "rust_native_storage_library"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"

[lib]
name = "rust_native_storage_library"
crate-type = ["cdylib"]
