[package]
name = "rust_native_storage_library"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.14.0"
bindgen = "0.53.2"
cmake = "0.1.42"
libc = "0.2.69"


[lib]
name = "rust_native_storage_library"
crate-type = ["cdylib"]
path = "src/lib.rs"